--- a/publications.html
+++ b/publications.html
@@ -141,6 +141,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CBM-valve.png"> </div>
+                <div class="title"> Quantification of Functional Hemodynamics in Aortic Valve Disease Using Cardiac Computed Tomography Angiography. </div>
+                <div class="author"> Xiujian Liu, Ge Guo, Anbang Wang, Yupeng Wang, Shaomin Chen, Penghui Zhao, Zhaowei Yin, Suxuan Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Lingyun Zu. </div>
+                <div class="source"> <div class="source_name"> Computers in Biology and Medicine </div> 177:108608, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compbiomed.2024.108608">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CMIG.png"> </div>
                 <div class="title"> Distraction-aware Hierarchical Learning for Vascular Structure Segmentation in Intravascular Ultrasound Images. </div>
                 <div class="author"> Wenhao Zhong, Heye Zhang, <div class="my_name">Zhifan Gao</div>, William Kongto Hau, Guang Yang, Xiujian Liu, Lin Xu. </div>
