--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-ESWA-carotid.png"> </div>
+                <div class="title"> Segmentation-Assisted Hierarchical Constrained State Space Approach for Robust Carotid Artery Wall Motion Measurement. </div>
+                <div class="author"> Jinhui Wu, Heye Zhang, Xiujian Liu, Minhua Lu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2024.124377">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
