--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
+                <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
+                <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
+                <!-- <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3362964">paper</a>] </div> -->
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-ESWA-carotid.png"> </div>
                 <div class="title"> Segmentation-Assisted Hierarchical Constrained State Space Approach for Robust Carotid Artery Wall Motion Measurement. </div>
                 <div class="author"> Jinhui Wu, Heye Zhang, Xiujian Liu, Minhua Lu, <div class="my_name">Zhifan Gao</div>. </div>
@@ -86,15 +95,6 @@
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3406416">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
-                <div class="title"> Embedding Tasks into the Latent Space: Cross-Space Consistency for Multi-Dimensional Analysis in Echocardiography. </div>
-                <div class="author"> Zhenxuan Zhang, Chengjin Yu, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3362964">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
@@ -147,6 +147,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
+                <div class="title"> Embedding Tasks into the Latent Space: Cross-Space Consistency for Multi-Dimensional Analysis in Echocardiography. </div>
+                <div class="author"> Zhenxuan Zhang, Chengjin Yu, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 43(6):2215-2228, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3362964">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
