--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/"> </div>
+                <div class="title"> A Coronary CT Angiography-Derived Myocardial Radiomics Model for Predicting Adverse Outcomes in Chronic Myocardial Infarction. </div>
+                <div class="author"> Yan Chen, Nan Zhang, Yifeng Gao, Zhen Zhou, Xuelian Gao, Jiayi Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Zhaoying Wen, Lei Xu. </div>
+                <div class="source"> <div class="source_name"> International Journal of Cardiology </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.ijcard.2024.132265">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
