--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
                 <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
                 <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
-                <!-- <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3362964">paper</a>] </div> -->
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3412935">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
