--- a/service.html
+++ b/service.html
@@ -53,6 +53,7 @@
             <li><p> IEEE Transactions on Industrial Informatics   </p></li>
             <li><p> IEEE Transactions on Geoscience and Remote Sensing </p></li>
             <li><p> IEEE Transactions on Big Data </p></li>
+            <li><p> IEEE Transactions on Neural Systems and Rehabilitation Engineering </p></li>
             <li><p> IEEE/ACM Transactions on Computational Biology and Bioinformatics  </p></li>
             <li><p> IEEE Transactions on Emerging Topics in Computational Intelligence </p></li>
             <li><p> IEEE Journal of Biomedical and Health Informatics  </p></li>
