--- a/publications.html
+++ b/publications.html
@@ -90,15 +90,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/"> </div>
-                <div class="title"> A Coronary CT Angiography-Derived Myocardial Radiomics Model for Predicting Adverse Outcomes in Chronic Myocardial Infarction. </div>
-                <div class="author"> Yan Chen, Nan Zhang, Yifeng Gao, Zhen Zhou, Xuelian Gao, Jiayi Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Zhaoying Wen, Lei Xu. </div>
-                <div class="source"> <div class="source_name"> International Journal of Cardiology </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.ijcard.2024.132265">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
@@ -182,6 +173,15 @@
                 <div class="author"> Xiujian Liu, Ge Guo, Anbang Wang, Yupeng Wang, Shaomin Chen, Penghui Zhao, Zhaowei Yin, Suxuan Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Lingyun Zu. </div>
                 <div class="source"> <div class="source_name"> Computers in Biology and Medicine </div> 177:108608, 2024  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compbiomed.2024.108608">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-IJC.png"> </div>
+                <div class="title"> A Coronary CT Angiography-Derived Myocardial Radiomics Model for Predicting Adverse Outcomes in Chronic Myocardial Infarction. </div>
+                <div class="author"> Yan Chen, Nan Zhang, Yifeng Gao, Zhen Zhou, Xuelian Gao, Jiayi Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Zhaoying Wen, Lei Xu. </div>
+                <div class="source"> <div class="source_name"> International Journal of Cardiology </div> 411:132265, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.ijcard.2024.132265">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
