--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
+                <div class="title"> Accurate Segmentation of Liver Tumor from Multi-Modality Non-Contrast Images Using a Dual-Stream Multi-Level Fusion Framework. </div>
+                <div class="author"> Chenchu Xu, Xue Wu, Boyan Wang, Jie Chen, <div class="my_name">Zhifan Gao</div>, Xiujian Liu, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2024.102414">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
                 <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
                 <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
