--- a/publications.html
+++ b/publications.html
@@ -81,15 +81,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-ESWA-carotid.png"> </div>
-                <div class="title"> Segmentation-Assisted Hierarchical Constrained State Space Approach for Robust Carotid Artery Wall Motion Measurement. </div>
-                <div class="author"> Jinhui Wu, Heye Zhang, Xiujian Liu, Minhua Lu, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> Expert Systems with Applications </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2024.124377">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
@@ -156,6 +147,24 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-BSPC-ppg.png"> </div>
+                <div class="title"> STGNet: Spatio-Temporal Graph Neural Networks Considering Inherent Properties of Physiological Signals for Camera-Based Remote Photoplethysmography. </div>
+                <div class="author"> Jiahao Xiong, Weihua Ou, Yi Yao, Yingying Liu, <div class="my_name">Zhifan Gao</div>, Zhonghua Liu, Jianping Gou. </div>
+                <div class="source"> <div class="source_name"> Biomedical Signal Processing and Control </div> 98(106690), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.bspc.2024.106690">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-ESWA-carotid.png"> </div>
+                <div class="title"> Segmentation-Assisted Hierarchical Constrained State Space Approach for Robust Carotid Artery Wall Motion Measurement. </div>
+                <div class="author"> Jinhui Wu, Heye Zhang, Xiujian Liu, Minhua Lu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 25(124377), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2024.124377">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
