--- a/publications.html
+++ b/publications.html
@@ -72,6 +72,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
+                <div class="title"> Adaptive Dynamic Inference for Few-Shot Left Atrium Segmentation. </div>
+                <div class="author"> Jun Chen, Xuejiao Li, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2024.103321">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
                 <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
                 <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
