--- a/publications.html
+++ b/publications.html
@@ -90,6 +90,16 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
+                <div class="title"> Hierarchical Relational Inference for Few-Shot Learning in 3D Left Atrial Segmentation. </div>
+                <div class="author"> Xuejiao Li, Jun Chen, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Emerging Topics in Computational Intelligence </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TETCI.2024.3377267">paper</a>] </div>
+            </div>
+            
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
@@ -160,10 +170,28 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-BSPC-ppg.png"> </div>
+                <div class="title"> Unsupervised Physics-Informed Deep Learning for Assessing Pulmonary Artery Hemodynamics. </div>
+                <div class="author"> Xiujian Liu, Baihong Xie, Dong Zhang, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Victor Hugo C. de Albuquerque. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 98(106690), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2024.125079">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-BSPC-ppg.png"> </div>
                 <div class="title"> STGNet: Spatio-Temporal Graph Neural Networks Considering Inherent Properties of Physiological Signals for Camera-Based Remote Photoplethysmography. </div>
                 <div class="author"> Jiahao Xiong, Weihua Ou, Yi Yao, Yingying Liu, <div class="my_name">Zhifan Gao</div>, Zhonghua Liu, Jianping Gou. </div>
                 <div class="source"> <div class="source_name"> Biomedical Signal Processing and Control </div> 98(106690), 2024 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.bspc.2024.106690">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-BSPC-ppg.png"> </div>
+                <div class="title"> Prediction of Freezing of Gait in Parkinson’s Disease based on Multi-Channel Time-Series Neural Network. </div>
+                <div class="author"> Boyan Wang, Xuegang Hu, Rongjun Ge, Chenchu Xu, Jinglin Zhang, Zhifan Gao, Shu Zhao, Kemal Polat. </div>
+                <div class="source"> <div class="source_name"> Artificial Intelligence in Medicine </div> 154(102932), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.artmed.2024.102932">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
