--- a/publications.html
+++ b/publications.html
@@ -151,15 +151,6 @@
                 <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TCSVT.2022.3232112">paper</a>] </div>
             </div>
-            
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCBB.png"> </div>
-                <div class="title"> Scale Mutualized Perception for Vessel Border Detection in Intravascular Ultrasound Images. </div>
-                <div class="author"> Xiujian Liu, Tianyuan Feng, Weipeng Liu, Liang Song, Yixuan Yuan, William Kongto Hau, Javier Del Ser, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE/ACM Transactions on Computational Biology and Bioinformatics </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCBB.2022.3224934">paper</a>] </div>
-            </div>
         </div>
         <br>
         
@@ -205,6 +196,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCBB.png"> </div>
+                <div class="title"> Scale Mutualized Perception for Vessel Border Detection in Intravascular Ultrasound Images. </div>
+                <div class="author"> Xiujian Liu, Tianyuan Feng, Weipeng Liu, Liang Song, Yixuan Yuan, William Kongto Hau, Javier Del Ser, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE/ACM Transactions on Computational Biology and Bioinformatics </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCBB.2022.3224934">paper</a>] 21(4):1060-1071, 2024 </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CBM-valve.png"> </div>
                 <div class="title"> Quantification of Functional Hemodynamics in Aortic Valve Disease Using Cardiac Computed Tomography Angiography. </div>
                 <div class="author"> Xiujian Liu, Ge Guo, Anbang Wang, Yupeng Wang, Shaomin Chen, Penghui Zhao, Zhaowei Yin, Suxuan Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Lingyun Zu. </div>
@@ -237,6 +237,15 @@
                 <div class="author"> Weiyuan Lin, <div class="my_name">Zhifan Gao</div>, Hui Liu, Heye Zhang. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 43(4):1462-1475, 2024  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2023.3339142">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-ASOC-semi-echo.png"> </div>
+                <div class="title"> Semi-Supervised Domain Adaptation Incorporating Three-Way Decision for Multi-View Echocardiographic Sequence Segmentation. </div>
+                <div class="author"> Shuxin Zhuang, Heye Zhang, Wanli Ding, Zhemin Zhuang, Jinglin Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Applied Soft Computing </div> 155(111449), 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.asoc.2024.111449">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
