--- a/publications.html
+++ b/publications.html
@@ -124,24 +124,6 @@
                 <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
             </div>
-            
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ASOC.png"> </div>
-                <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
-                <div class="author"> Jinhao Liu, Xinglai Zhu, Chenchu Xu, Lei Xu, <div class="my_name">Zhifan Gao</div>, Kemal Polat, Fayadh Alenezi. </div>
-                <div class="source"> <div class="source_name"> Applied Soft Computing </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.asoc.2023.110694">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CMIG-liver.png"> </div>
-                <div class="title"> Accurate Segmentation of Liver Tumor from Multi-Modality Non-Contrast Images Using a Dual-Stream Multi-Level Fusion Framework. </div>
-                <div class="author"> Chenchu Xu, Xue Wu, Boyan Wang, Jie Chen, <div class="my_name">Zhifan Gao</div>, Xiujian Liu, Heye Zhang. </div>
-                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2024.102414">paper</a>] </div>
-            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -246,6 +228,24 @@
                 <div class="author"> Shuxin Zhuang, Heye Zhang, Wanli Ding, Zhemin Zhuang, Jinglin Zhang, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Applied Soft Computing </div> 155(111449), 2024  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.asoc.2024.111449">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-ASOC.png"> </div>
+                <div class="title"> Accurate 3D Contrast-Free Myocardial Infarction Delineation Using a 4D Dual-Stream Spatiotemporal Feature Learning Framework. </div>
+                <div class="author"> Jinhao Liu, Xinglai Zhu, Chenchu Xu, Lei Xu, <div class="my_name">Zhifan Gao</div>, Kemal Polat, Fayadh Alenezi. </div>
+                <div class="source"> <div class="source_name"> Applied Soft Computing </div> 146(110694), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.asoc.2023.110694">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-CMIG-liver.png"> </div>
+                <div class="title"> Accurate Segmentation of Liver Tumor from Multi-Modality Non-Contrast Images Using a Dual-Stream Multi-Level Fusion Framework. </div>
+                <div class="author"> Chenchu Xu, Xue Wu, Boyan Wang, Jie Chen, <div class="my_name">Zhifan Gao</div>, Xiujian Liu, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 116(102414), 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2024.102414">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
