--- a/publications.html
+++ b/publications.html
@@ -181,8 +181,8 @@
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCBB.png"> </div>
                 <div class="title"> Scale Mutualized Perception for Vessel Border Detection in Intravascular Ultrasound Images. </div>
                 <div class="author"> Xiujian Liu, Tianyuan Feng, Weipeng Liu, Liang Song, Yixuan Yuan, William Kongto Hau, Javier Del Ser, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE/ACM Transactions on Computational Biology and Bioinformatics </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCBB.2022.3224934">paper</a>] 21(4):1060-1071, 2024 </div>
+                <div class="source"> <div class="source_name"> IEEE/ACM Transactions on Computational Biology and Bioinformatics </div> 21(4):1060-1071, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCBB.2022.3224934">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
