--- a/publications.html
+++ b/publications.html
@@ -62,13 +62,22 @@
             <!--
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXXXX.png"> </div>
                 <div class="title"> Gradient and Feature Conformity-Steered Medical Image Classification with Noisy Labels. </div>
                 <div class="author"> Xiaohan Xing, Zhen Chen, <div class="my_name">Zhifan Gao</div>, Yixuan Yuan. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
             </div>
             -->
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
+                <div class="title"> Multi-level Noise Sampling from Single Image for Low-dose Tomography Reconstruction. </div>
+                <div class="author"> Weiwen Wu, Yifei Long, <div class="my_name">Zhifan Gao</div>, Guang Yang, Fangxiao Cheng, Jianjia Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
