--- a/publications.html
+++ b/publications.html
@@ -81,34 +81,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
-                <div class="title"> Adaptive Dynamic Inference for Few-Shot Left Atrium Segmentation. </div>
-                <div class="author"> Jun Chen, Xuejiao Li, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
-                <div class="source"> <div class="source_name"> Medical Image Analysis </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2024.103321">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
-                <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
-                <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3412935">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
-                <div class="title"> Hierarchical Relational Inference for Few-Shot Learning in 3D Left Atrial Segmentation. </div>
-                <div class="author"> Xuejiao Li, Jun Chen, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Emerging Topics in Computational Intelligence </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TETCI.2024.3377267">paper</a>] </div>
-            </div>
-            
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
                 <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
                 <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
@@ -148,6 +120,33 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
+                <div class="title"> Adaptive Dynamic Inference for Few-Shot Left Atrium Segmentation. </div>
+                <div class="author"> Jun Chen, Xuejiao Li, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 98(103321), 2024. </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2024.103321">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-MedIA-LA.png"> </div>
+                <div class="title"> Hierarchical Relational Inference for Few-Shot Learning in 3D Left Atrial Segmentation. </div>
+                <div class="author"> Xuejiao Li, Jun Chen, Heye Zhang, Yongwon Cho, Sung Ho Hwang, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Emerging Topics in Computational Intelligence </div> 8(5):3352-3367, 2024. </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TETCI.2024.3377267">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-constraint.png"> </div>
+                <div class="title"> Constraint-Aware Learning for Fractional Flow Reserve Pullback Curve Estimation from Invasive Coronary Imaging. </div>
+                <div class="author"> Dong Zhang, Xiujian Liu, Anbang Wang, Hongwei Zhang, Guang Yang, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Medical Imaging </div> 43(12):4091-4104, 2024.  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TMI.2024.3412935">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
