--- a/publications.html
+++ b/publications.html
@@ -276,6 +276,50 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/XXX.png">
+                </div>
+            <div class="title"> Variational Field Constraint Learning for Degree of Coronary Artery Ischemia Assessment. </div>
+            <div class="author"> Qi Zhang, Xiujian Liu, Heye Zhang, Chenchu Xu, Guang Yang, Yixuan Yuan, Tao Tan, <div class="my_name">Zhifan Gao</div>. </div>
+            <div class="source">  <div class="source_name"> 25nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2024. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-72384-1_72">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/XXX.png">
+                </div>
+            <div class="title"> Fuzzy Attention-Based Border Rendering Network for Lung Organ Segmentation. </div>
+            <div class="author"> Sheng Zhang, Yang Nan, Yingying Fang, Shiyi Wang, Xiaodan Xing, <div class="my_name">Zhifan Gao</div>, Guang Yang. </div>
+            <div class="source">  <div class="source_name"> 25nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2024. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-72114-4_29">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/XXX.png">
+                </div>
+            <div class="title"> Stealing Knowledge from Pre-trained Language Models for Federated Classifier Debiasing. </div>
+            <div class="author"> Meilu Zhu, Qiushi Yang, <div class="my_name">Zhifan Gao</div>, Jun Liu, Yixuan Yuan. </div>
+            <div class="source">  <div class="source_name"> 25nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2024. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-72117-5_64">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position">
+                    <img class="img_style" src="./publication_imgs/XXX.png">
+                </div>
+            <div class="title"> VertFound: Synergizing Semantic and Spatial Understanding for Fine-Grained Vertebrae Classification via Foundation Models. </div>
+            <div class="author"> Yinhao Wu, Jinzhou Tang, Zequan Yao, Mingjie Li, Yuan Hong, Dongdong Yu, <div class="my_name">Zhifan Gao</div>, Bin Chen, Shen Zhao. </div>
+            <div class="source">  <div class="source_name"> 25nd International Conference on Medical Image Computing and Computer Assisted Intervention </div> (MICCAI), 2024. </div>
+            <div class="link"> <br>[<a href="https://doi.org/10.1007/978-3-031-72390-2_71">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-IoT-FFR.png"> </div>
                 <div class="title"> A Physics-guided Deep Learning Approach For Functional Assessment of Cardiovascular Disease in IoT-based Smart Health. </div>
                 <div class="author"> Dong Zhang, Xiujian Liu, Jun Xia, <div class="my_name">Zhifan Gao</div>, Heye Zhang, Victor Hugo C. de Albuquerque. </div>
