--- a/publications.html
+++ b/publications.html
@@ -96,6 +96,15 @@
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3382050">paper</a>] </div>
             </div>
+            
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title">Main Coronary Flow Calculation With the Assistance of Physiological Side Branch Flow. </div>
+                <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3469289">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
