--- a/publications.html
+++ b/publications.html
@@ -108,6 +108,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title">Data- and Physics-driven Deep Learning Based Reconstruction for Fast MRI: Fundamentals and Methodologies. </div>
+                <div class="author"> Jiahao Huang, Yinzhe Wu, Fanwen Wang, Yingying Fang, Yang Nan, Cagan Alkan, Daniel Abraham, Congyu Liao, Lei Xu, <div class="my_name">Zhifan Gao</div>, Weiwen Wu, Lei Zhu, Zhaolin Chen, Peter Lally, Neal Bangerter, Kawin Setsompop, Yike Guo, Daniel Rueckert, Ge Wang, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> IEEE Reviews in Biomedical Engineering </div>  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/RBME.2024.3485022">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
                 <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
                 <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
