--- a/publications.html
+++ b/publications.html
@@ -87,15 +87,6 @@
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3406416">paper</a>] </div>
             </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-ECG.png"> </div>
-                <div class="title"> Frequency-Enhanced Geometric-Constrained Reconstruction for Localizing Myocardial Infarction in 12-Lead Electrocardiograms. </div>
-                <div class="author"> Shichang Lian, <div class="my_name">Zhifan Gao</div>, Hui Wang, Xiujian Liu, Lei Xu, Huafeng Liu, Heye Zhang. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3382050">paper</a>] </div>
-            </div>
             
             <hr class="hr_style">
             <div class="paper">
@@ -182,6 +173,15 @@
                 <div class="author"> Jun Chen, Heye Zhang, Mingming Gong, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Pattern Recognition </div> 154:110600, 2024  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.patcog.2024.110600">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-ECG.png"> </div>
+                <div class="title"> Frequency-Enhanced Geometric-Constrained Reconstruction for Localizing Myocardial Infarction in 12-Lead Electrocardiograms. </div>
+                <div class="author"> Shichang Lian, <div class="my_name">Zhifan Gao</div>, Hui Wang, Xiujian Liu, Lei Xu, Huafeng Liu, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 71(9):2599-2611, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3382050">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
