--- a/publications.html
+++ b/publications.html
@@ -78,15 +78,6 @@
                 <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  2024 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
             </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
-                <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
-                <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3406416">paper</a>] </div>
-            </div>
             
             <hr class="hr_style">
             <div class="paper">
@@ -182,6 +173,15 @@
                 <div class="author"> Shichang Lian, <div class="my_name">Zhifan Gao</div>, Hui Wang, Xiujian Liu, Lei Xu, Huafeng Liu, Heye Zhang. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 71(9):2599-2611, 2024  </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3382050">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TBME-microvascular.png"> </div>
+                <div class="title"> Non-invasive Assessment of Coronary Microvascular Dysfunction Using Vascular Deformation-Based Flow Estimation. </div>
+                <div class="author"> Xiaofei Xue, Dan Deng, Heye Zhang, <div class="my_name">Zhifan Gao</div>, Ping Zhu, William Kongto Hau, Zhihui Zhang, Xiujian Liu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 71(10):3000-3013, 2024  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3406416">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
