--- a/publications.html
+++ b/publications.html
@@ -72,8 +72,17 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Multiple Token Rearrangement Transformer Network with Explicit Superpixel Constraint for Segmentation of Echocardiography. </div>
+                <div class="author"> Wanli Ding, Heye Zhang, Xiujian Liu, Zhenxuan Zhang, Shuxin Zhuang, <div class="my_name">Zhifan Gao</div>, Lin Xu. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103470">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
-                <div class="title"> Multi-level Noise Sampling from Single Image for Low-dose Tomography Reconstruction. </div>
+                <div class="title"> Multi-Level Noise Sampling from Single Image for Low-dose Tomography Reconstruction. </div>
                 <div class="author"> Weiwen Wu, Yifei Long, <div class="my_name">Zhifan Gao</div>, Guang Yang, Fangxiao Cheng, Jianjia Zhang. </div>
                 <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  2024 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
