--- a/publications.html
+++ b/publications.html
@@ -87,15 +87,6 @@
                 <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  2024 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
             </div>
-            
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
-                <div class="title">Main Coronary Flow Calculation With the Assistance of Physiological Side Branch Flow. </div>
-                <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3469289">paper</a>] </div>
-            </div>
 
             <hr class="hr_style">
             <div class="paper">
@@ -129,6 +120,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title">Main Coronary Flow Calculation With the Assistance of Physiological Side Branch Flow. </div>
+                <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 72(2):747-759, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3469289">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
