--- a/publications.html
+++ b/publications.html
@@ -124,6 +124,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title">Multimodal Cross Global Learnable Attention Network for MR Images Denoising with Arbitrary Modal Missing. </div>
+                <div class="author"> Mingfu Jiang, Shuai Wang, Ka-Hou Chan, Yue Sun, Yi Xu, Zhuoneng Zhang, Qinquan Gao, <div class="my_name">Zhifan Gao</div>, Tong Tong, Hing-Chiu Chang, Tao Tan. </div>
+                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 121:102497, 2025. </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2025.102497">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title">Main Coronary Flow Calculation With the Assistance of Physiological Side Branch Flow. </div>
                 <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 72(2):747-759, 2025 </div>
