--- a/publications.html
+++ b/publications.html
@@ -90,15 +90,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
-                <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
-                <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
                 <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
                 <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
@@ -107,10 +98,32 @@
             </div>
         </div>
         <br>
+
+
+
+
         
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TNNLS.png"> </div>
+                <div class="title"> Explainable Classification of Benign-Malignant Pulmonary Nodules With Neural Networks and Information Bottleneck. </div>
+                <div class="author"> Haixing Zhu, Weipeng Liu, <div class="my_name">Zhifan Gao</div>, Heye Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Neural Networks and Learning Systems </div> 36(2):2028-2039, 2025  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TNNLS.2023.3303395">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-XXX.png"> </div>
+                <div class="title"> A Priority-Guided Contrastive Network for Delineating Vascular Layers in Arterial Ultrasound. </div>
+                <div class="author"> Minhua Lu, Tianyu Lin, Weiyuan Lin, Zhaohui Li, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Expert Systems With Applications </div> 272:126695, 2025  </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.126695">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
