--- a/publications.html
+++ b/publications.html
@@ -81,15 +81,6 @@
 
             <hr class="hr_style">
             <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
-                <div class="title"> Multi-Level Noise Sampling from Single Image for Low-dose Tomography Reconstruction. </div>
-                <div class="author"> Weiwen Wu, Yifei Long, <div class="my_name">Zhifan Gao</div>, Guang Yang, Fangxiao Cheng, Jianjia Zhang. </div>
-                <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div>  2024 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
                 <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
                 <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
@@ -106,6 +97,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2024-TMI-ultrasound.png"> </div>
+                <div class="title"> Multi-Level Noise Sampling from Single Image for Low-dose Tomography Reconstruction. </div>
+                <div class="author"> Weiwen Wu, Yifei Long, <div class="my_name">Zhifan Gao</div>, Guang Yang, Fangxiao Cheng, Jianjia Zhang. </div>
+                <div class="source"> <div class="source_name"> IEEE Journal of Biomedical and Health Informatics </div> 29(2):1256-1268, 2024 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/JBHI.2024.3486726">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
