--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> FedHNR: Federated Hierarchical Resilient Learning for Echocardiogram Segmentation with Annotation Noise. </div>
+                <div class="author"> Yiwen Wang, Wanli Ding, Weiyuan Lin, Tao Tan, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.eswa.2025.126841">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Multiple Token Rearrangement Transformer Network with Explicit Superpixel Constraint for Segmentation of Echocardiography. </div>
                 <div class="author"> Wanli Ding, Heye Zhang, Xiujian Liu, Zhenxuan Zhang, Shuxin Zhuang, <div class="my_name">Zhifan Gao</div>, Lin Xu. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
