--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> FedBM: Stealing Knowledge from Pre-Trained Language Models for Heterogeneous Federated Learning. </div>
+                <div class="author"> Meilu Zhu, Qiushi Yang, <div class="my_name">Zhifan Gao</div>, Yixuan Yuan, Jun Liu. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103524">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> FedHNR: Federated Hierarchical Resilient Learning for Echocardiogram Segmentation with Annotation Noise. </div>
                 <div class="author"> Yiwen Wang, Wanli Ding, Weiyuan Lin, Tao Tan, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Expert Systems with Applications </div> 2025 </div>
