--- a/publications.html
+++ b/publications.html
@@ -82,6 +82,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Revisiting Medical Image Retrieval via Knowledge Consolidation. </div>
+                <div class="author"> Yang Nan, Huichi Zhou, Xiaodan Xing, Giorgos Papanastasiou, Lei Zhu, <div class="my_name">Zhifan Gao</div>, Alejandro F. Frangi, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103553">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> FedBM: Stealing Knowledge from Pre-Trained Language Models for Heterogeneous Federated Learning. </div>
                 <div class="author"> Meilu Zhu, Qiushi Yang, <div class="my_name">Zhifan Gao</div>, Yixuan Yuan, Jun Liu. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
