--- a/publications.html
+++ b/publications.html
@@ -114,15 +114,6 @@
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103470">paper</a>] </div>
             </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
-                <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
-                <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
-                <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div>  </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCSVT.2022.3232112">paper</a>] </div>
-            </div>
         </div>
         <br>
 
@@ -186,6 +177,15 @@
                 <div class="author"> Anbang Wang, Heye Zhang, Baihong Xie, <div class="my_name">Zhifan Gao</div>, Yong Dong, Changnong Peng, Xiujian Liu. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Biomedical Engineering </div> 72(2):747-759, 2025 </div>
                 <div class="link"> <br>[<a href="https://doi.org/10.1109/TBME.2024.3469289">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2023-TCVST.png"> </div>
+                <div class="title"> Multi-domain Adversarial Variational Bayesian Inference for Domain Generalization. </div>
+                <div class="author"> <div class="my_name">Zhifan Gao</div>, Saidi Guo, Chenchu Xu, Jinglin Zhang, Mingming Gong, Javier Del Ser, Shuo Li. </div>
+                <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div> 35(4):3081-3093, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1109/TCSVT.2022.3232112">paper</a>] </div>
             </div>
 
             <hr class="hr_style">
