--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,15 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Bi-variational Physics-Informed Operator Network for Fractional Flow Reserve Curve Assessment from Coronary Angiography. </div>
+                <div class="author"> Baihong Xie, Heye Zhang, Anbang Wang, Xiujian Liu, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103564">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> BLENet: a Bio-inspired Lightweight and Efficient Network for Left Ventricle Segmentation in Echocardiography. </div>
                 <div class="author"> Xintao Pang, Fengjuan Yao, Yanming Zhang, Yue Sun, Edmundo Patricio Lopes Lao, Chuan Lin, Patrick Cheong-Iao Pang, Wei Wang, Wei Li, <div class="my_name">Zhifan Gao</div>, Tao Tan. </div>
                 <div class="source"> <div class="source_name"> IEEE Transactions on Circuits and Systems for Video Technology </div> 2025 </div>
