--- a/publications.html
+++ b/publications.html
@@ -73,15 +73,6 @@
             <hr class="hr_style">
             <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
-                <div class="title"> Causal Recurrent Intervention for Cross-Modal Cardiac Image Segmentation. </div>
-                <div class="author"> Qixin Lin, Saidi Guo, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
-                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 2025 </div>
-                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2025.102549">paper</a>] </div>
-            </div>
-
-            <hr class="hr_style">
-            <div class="paper">
-                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
                 <div class="title"> Bi-variational Physics-Informed Operator Network for Fractional Flow Reserve Curve Assessment from Coronary Angiography. </div>
                 <div class="author"> Baihong Xie, Heye Zhang, Anbang Wang, Xiujian Liu, <div class="my_name">Zhifan Gao</div>. </div>
                 <div class="source"> <div class="source_name"> Medical Image Analysis </div> 2025 </div>
@@ -151,6 +142,15 @@
         
         <div class="paper_list">
             <h1 style="margin-top: 0em">Publication</h1>
+
+            <hr class="hr_style">
+            <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/XXX.png"> </div>
+                <div class="title"> Causal Recurrent Intervention for Cross-Modal Cardiac Image Segmentation. </div>
+                <div class="author"> Qixin Lin, Saidi Guo, Heye Zhang, <div class="my_name">Zhifan Gao</div>. </div>
+                <div class="source"> <div class="source_name"> Computerized Medical Imaging and Graphics </div> 123:102549, 2025 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.compmedimag.2025.102549">paper</a>] </div>
+            </div>
 
             <hr class="hr_style">
             <div class="paper">
